정신나갈것같아

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -84,20 +84,30 @@
                     </div>
                 </div>
 
-                <div class="mBoardSup flex-column-between"> <!-- 메인페이지 최고의 게시판, 총 게시글 -->
-                    <div class="mBestB"><!-- 최고의 게시판 -->
+                <div class="mBoardSup "> <!-- 메인페이지 최고의 게시판, 총 게시글 -->
+                    <div class="mBestB box-shadow border-radius-2vmin"><!-- 최고의 게시판 -->
 
                         <div class="mBestBHead"> <!-- 메인페이지 최고의 게시판 헤더 -->
-                            <p>오늘의 베스트 게시글</p>
+                            <a href="#" class="mBestBHeadA">
+                                <p>오늘의 베스트 게시글</p>
+                            </a>
                         </div>
 
-                        <div class="mBestText"> <!-- 메인페이지 최괴의 게시판 제목과 이름 -->
-                            <a href="#">얘들아 그거 알아?</a>
-                            <p>익명</p>
+                        <div class="mBestText flex-center-between"> <!-- 메인페이지 최괴의 게시판 제목과 이름 -->
+                            
+                            <div class="mBestInText">
+                                <a href="#">얘들아 그거 알아?</a>
+                                <p>익명</p>
+                            </div>
+
+                            <div class="mBestInImg">
+                                <img src="/image/human.png" alt="">
+                                <img src="/image/human.png" alt="">
+                            </div>
+
                         </div>
 
-                        <div class="mBestImg"> <!-- 메인페이지 최고의 게시물 좋아요와 댓글창 이미지 -->
-                            <img src="/image/human.png" alt="">
+                        <div class="mBestImg"> <!-- 메인페이지 최고의 게시물 이미지 -->
                             <img src="/image/human.png" alt="">
                         </div>
 
