--- a/HTML/classPage.html
+++ b/HTML/classPage.html
@@ -43,7 +43,7 @@
 
     <section>
         <div id="classPage">
-            <div class="classHomework border-radius-2vmin flex-center"> <!-- 과제 공유방 클래스-->
+            <div class="classHomework border-radius-2vmin flex-center box-shadow"> <!-- 과제 공유방 클래스-->
 
                 <div class="classHomeworkContainer flex-column-center">
                     <div class="CHHead flex-center-between"> <!--classHomework start  -->
@@ -123,7 +123,7 @@
                 </div>
             </div>
 
-            <div class="classNoticeBir border-radius-2vmin"> <!-- 공지사항, 생일인 친구 클래스 -->
+            <div class="classNoticeBir border-radius-2vmin box-shadow"> <!-- 공지사항, 생일인 친구 클래스 -->
                 
                 <div class="classNoticeBirContainer flex-column-between">
                     
