--- a/HTML/classPage.html
+++ b/HTML/classPage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/header.css">
     <link rel="stylesheet" href="../CSS/classPage.css">
-    <title>Document</title>
+    <title>반 페이지</title>
 </head>
 <body>
     <header class="flex-column-around">
